# daewoo-login-test

./: .gitignore  build.gradle  gradle.properties  settings.gradle
.claude/: settings.local.json
PDR_EXT/: build.gradle.kts
PDR_EXT/src/androidTest/java/com/example/pdr_ext/: ExampleInstrumentedTest.kt
PDR_EXT/src/main/: AndroidManifest.xml
PDR_EXT/src/main/cpp/PDR_EXT/include/: PDRresult.h
PDR_EXT/src/main/cpp/PDR_EXT/include/Filter/: AdaptiveFilter.h  MovingAverage.h
PDR_EXT/src/main/cpp/PDR_EXT/include/Sensor/: CoordinateTransform.h  SensorManager.h
PDR_EXT/src/main/cpp/PDR_EXT/include/StepDetection/: handSwing.h  inPocket.h  onHand.h
PDR_EXT/src/main/cpp/PDR_EXT/include/StepLength/: SLRequire.h  StepLength.h
PDR_EXT/src/main/cpp/PDR_EXT/src/: CMakeLists.txt  PDRStateManager.cpp
PDR_EXT/src/main/cpp/PDR_EXT/src/Filter/: AdaptiveFilter.cpp  MovingAverage.cpp
PDR_EXT/src/main/cpp/PDR_EXT/src/Sensor/: CoordinateTransform.cpp  SensorManager.cpp
PDR_EXT/src/main/cpp/PDR_EXT/src/StepDetection/: handSwing.cpp  inPocket.cpp  onHand.cpp
PDR_EXT/src/main/cpp/PDR_EXT/src/StepLength/: SLRequire.cpp  StepLength.cpp
PDR_EXT/src/main/java/com/fifth/pdr_ext/: KtCppLinker.kt  PDR.kt
PDR_EXT/src/test/java/com/example/pdr_ext/: ExampleUnitTest.kt
app/: build.gradle  google-services.json
app/libs/: HeroPDR-release.aar  PDR_EXT-release.aar  UniWebView.aar
app/src/androidTest/java/com/example/daewoo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/daewoo/: CommonResponse.kt  DaewooApp.kt  LoginActivity.kt  (+5 more)
app/src/main/res/drawable/: bg_push_banner.xml
app/src/main/res/layout/: activity_flatmap.xml  activity_login.xml  activity_main.xml  activity_register.xml  mainpage.xml  setting_activity.xml
app/src/main/res/raw/: hansando_0f_binarymap.txt  hansando_1f_binarymap.txt  hansando_2f_binarymap.txt  hansando_3f_binarymap.txt  hansando_4f_binarymap.txt  hansando_5f_binarymap.txt  hansando_b1f_binarymap.txt  hansando_b2f_binarymap.txt  hansando_b3f_binarymap.txt  poi.json
app/src/main/res/values/: colors.xml  strings.xml
app/src/main/res/values-night/: themes.xml
backend-server/: build.gradle.kts  gradlew.bat  settings.gradle
backend-server/src/main/resources/: application.yml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
maplocationlib/: build.gradle
maplocationlib/src/main/: AndroidManifest.xml
maplocationlib/src/main/assets/: floorchange_elevator_areas.json  indoor_map_0f.json  indoor_map_1f.json  map_correction_areas.json  stairs_area.json  zeromap_1F-origin(73,158).txt
maplocationlib/src/main/assets/109/: floorchange_stairs_areas.json  indoor_map_2f.json  indoor_map_3f.json  indoor_map_4f.json  indoor_map_7f.json  indoor_map_b1f.json  indoor_map_b2f.json  indoor_map_b3f.json  stairs_area.json  zeromap_2F-origin(143,184).txt  zeromap_basic-origin(143,184).txt
maplocationlib/src/main/cpp/: CMakeLists.txt  native-lib.cpp
maplocationlib/src/main/res/values/: strings.xml  themes.xml
(+48 files in other folders)
